feature: solve problems lesson2_practice_visual_titanic.ipynb

--- a/Lessons/Lesson1 Start Pandas + Numpy/Lesson1.ipynb
+++ b/Lessons/Lesson1 Start Pandas + Numpy/Lesson1.ipynb
@@ -164,7 +164,7 @@
     }
    ],
    "source": [
-    "data.describe()  # Статистка данных: число не пропущенных значений, среднее, санд. откл, минимальное, квартили (3 точки, которые делят данные на 4 части), максимальное значение"
+    "data.describe()  # Статистка данных: число не пропущенных значений, среднее, станд. откл, минимальное, квартили (3 точки, которые делят данные на 4 части), максимальное значение"
    ],
    "metadata": {
     "collapsed": false,
