--- a/Lessons/Lesson2 Visualisation/Lesson2.ipynb
+++ b/Lessons/Lesson2 Visualisation/Lesson2.ipynb
@@ -536,7 +536,7 @@
     }
    ],
    "source": [
-    "df.corr()  # Построение матрицы корреляций (по умолчанию - корреляция Пирсона для количественных признаков) (для категориальных и бинарных другие корреляции - Метиса или Крамера)"
+    "df.corr()  # Построение матрицы корреляций (по умолчанию - корреляция Пирсона для количественных признаков) (для категориальных и бинарных другие корреляции - Мэтьюса или Крамера)"
    ],
    "metadata": {
     "collapsed": false,
